--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <script src="js/modernizr.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-<embed src="http://m10.music.126.net/20190727010006/1d01d0ddb546d0c014d9aeee98366472/ymusic/e8c3/b990/01fc/19b373e3bfa86a6d0be3808ad706e244.mp3" autostart="true" loop="true" hidden="true"></embed>
+<embed src="http://119.27.181.37/100/dshh.mp3" autostart="true" loop="true" hidden="true"></embed>
 <div class="content" id="Main-Content">
 	<h1>💑From 100 Days To ∞</h1>
 	<div class="agile-main">
