--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 			<div class="front">
 				<h2>联系靓仔</h2>
 				<p>Way 1 : 在天空挂的星星上</p>
-				<p>Way 2 : 在侯业君妹妹的心里</p>
-				<p>Way 3 : 在彭胤洲唱不完的歌里</p>
+				<p>Way 2 : 在君君妹妹的心里</p>
+				<p>Way 3 : 在洲洲哥哥唱不完的歌里</p>
 				<a id="flip2back" href="#front">翻回去</a>
 			</div>
 			<div id="content" class="back">
